# brake_trainer_pro

./: .gitignore  GETTING_STARTED.md  GETTING_STARTED_MACOS_LINUX.md  README.md  pyproject.toml
.github/workflows/: web-pages.yml  windows-build.yml
docs/: architecture.md  packaging.md  structure.md  windows-build.md  windows-install.md
installer/windows/: BrakeTrainerPro.iss
scripts/windows/: build_release.ps1
src/brake_trainer_pro/: __init__.py  config.py  database.py  devices.py  main.py  models.py  paths.py  scoring.py  training.py  update_checker.py
src/brake_trainer_pro/ui/: __init__.py  main_window.py  widgets.py
tests/: test_config.py  test_database.py  test_training.py
web/: app.js  challenge.html  index.html  results.html  settings.html  styles.css
